--- a/css/styles.css
+++ b/css/styles.css
@@ -21,7 +21,7 @@ a {
 
 .page-header {
   max-width: 100vw;
-  background-image: url("..css/images/desktop/image-header.jpg");
+  background-image: url("/..css/images/desktop/image-header.jpg");
   background-size: cover;
   background-position: center;
   overflow: hidden;
